# git-practice

./: .git-practice  .git-practice.pub  Note  README.md  hello.md  learning.py  pyproject.toml
.github/workflows/: cd-pypi.yml  cd-testpypi.yml  ci.yml  release.yml
tests/: test_learning.py
